fix title in every page. and image height on mobile

--- a/includes/css/index.css
+++ b/includes/css/index.css
@@ -103,10 +103,10 @@ body {
 #page_astrology .astrology_title{
 	width: auto;
 	background-color: white;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: "Roboto";
 	font-style: normal;
 	font-size:15px;
-	font-weight: 400;
+	font-weight: 500;
 	color: #412a5b;
 	text-align: center;
 	padding: 9px;
@@ -152,11 +152,13 @@ body {
 	/*margin-right:5px;*/	/*for space between true/false buttons*/
 	background-color: #fd0160;
 	width: 135px;
+	font-family: "Roboto";
 }
 #page_astrology .falseButton {
 	margin-left:5px;	/*for space between true/false buttons*/
 	background-color: #2c2048;
 	width: 135px;
+	font-family: "Roboto";
 }
 
 
@@ -182,17 +184,16 @@ body {
 	padding-top: 7px;
 }
 #page_statistics #true_comments_a{
-    width:40px;
+    width:50px;
 	height:31px;
     float: left;
-    margin-left:7px;
     background: url('../images/true_comments.png') no-repeat;
     background-size: 30px;
-    background-position: 1px 3px;
+    background-position: 20px 3px;
 }
 #page_statistics .statistics_title{
 	background-color: white;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Roboto';
 	font-style: normal;
 	font-size:15px;
 	font-weight: 400;
@@ -203,13 +204,12 @@ body {
 	padding-top: 3px;
 }
 #page_statistics #false_comments_a{
-	width:40px;
+	width:50px;
 	height:31px;
 	float:right;
-	margin-right:7px;
 	background: url('../images/false_comments.png') no-repeat;
 	background-size: 30px;
-    background-position: 9px 3px;
+    background-position: 0px 3px;
 }
 
 
@@ -219,10 +219,13 @@ body {
 	display: inline-block;
 }
 #location_icon{
-	width:11px;
-	height:16px;
+	width:12px;
+	height:26px;
 	float: left;
 	background: url('../images/location.png') no-repeat;
+	font-size: 20px;
+	background-position: 0 7px;
+	background-size: 12px;
 }
 #country_name{
 	margin-left: 6px;
@@ -230,6 +233,7 @@ body {
 	font-family: 'Roboto';
 	font-weight: 500;
 	color: #6c6060;
+	font-size:22px;
 }
 #page_statistics #canvas {
 	width: 350px;
@@ -403,6 +407,8 @@ body {
 	height:16px;
 	float: left;
 	background: url('../images/location_gray.png') no-repeat;
+	background-position: 0 3px;
+	background-size: 9px;
 }
 .comments_country_name{
 	margin-left: 17px;
@@ -567,6 +573,6 @@ body {
 		margin-bottom: 50px;
 	}
 	.comments_pic{
-		height: 210px;
+		height: 160px;
 	}
 }
